# pySigma-backend-azure

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/azure/: __init__.py  azure.py
sigma/pipelines/azure/: __init__.py  azure.py
tests/: test_backend_azure.py  test_pipelines_azure.py
