[tool.poetry]
name = "pySigma-backend-azure"
version = "0.1.2"
description = "pySigma Azure Backend"
authors = ["Alex <alex@sinn.io>"]
license = "MIT"
repository = "https://github.com/sifex/pySigma-backend-azure"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.9.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
